# ordershop

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
billing_service/: Dockerfile  billing_service.py
crm_service/: crm_service.py
customer_service/: Dockerfile
gateway_api/: gateway_api.py
lib/: event_store.py
msg_service/: Dockerfile
order_service/: Dockerfile  order_service.py
product_service/: Dockerfile
