[tool.poetry]
name = "confluent-ordershop"
version = "0.1.1"
description = "Confluent'ized ordershop"
authors = ["André Srinivasan"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
confluent-kafka = "^1.9.0"
redis = "^4.3.4"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
